M    toolkit/src/test/java/eu/clarin/cmd/toolkit/TestCMDToolkit.java - added downgrade tests
M    toolkit/src/main/resources/toolkit/xsd/cmd-component.xsd
- readded a_res Schematron rule to warn that @ref and @ComponentId wont survive a downgrade to 1.1

M    toolkit/src/main/resources/toolkit/downgrade/cmd-component-1_2-to-1_1.xsl
- fixes around Attributes